--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ releases
 addons/missions/mpmissions/~CarrierStrike_Malden_Small.Malden/mission.sqm
 Carrier-Strike.code-workspace
 dev
+stringtables/.~lock.master_stringtable.ods\#
